# ixwss

./: CMakeLists.txt  build_arm.sh  build_tcc.sh  build_x86.sh  cross-arm-none-linux-gnueabi.cmake  cross-arm-telechips-linux-gnueabi.cmake  cross-stbgcc-4.8-1.0.cmake  doxyconf  howtobuild.txt  ixwss.pc.in  mkpackage.sh  readme.html  readme.md  readme.txt  releasenote.txt
ixcert/: CMakeLists.txt  ixserver.crt  ixserver.key  rootca.crt
ixconf/: CMakeLists.txt  ixconfig.conf  ixconfig.xml
ixlib/: CMakeLists.txt
ixlib/old_wss/: CMakeLists.txt  ixplugins.conf  ixwss.conf
ixlib/old_wss/include/: IXLog.h  IXPluginAdapter.h  IXThread.h  IXWebSocketData.h  IXWebSocketPluginSetting.h  IXWebSocketServer.h  IXWebSocketServerPrivate.h  IXWebSocketSession.h  IXWebSocketSetting.h  IXWebSocketVhost.h
ixlib/old_wss/src/: IXPluginAdapter.cpp  IXThread.cpp  IXWebSocketData.cpp  IXWebSocketPluginSetting.cpp  IXWebSocketServer.cpp  IXWebSocketServerPrivate.cpp  IXWebSocketSession.cpp  IXWebSocketSetting.cpp  IXWebSocketVhost.cpp
ixlib/wsc/: CMakeLists.txt
ixlib/wsc/include/: IXClientLog.h  IXClientThread.h  IXWebSocketClient.h  IXWebSocketClientData.h  IXWebSocketClientPrivate.h
ixlib/wsc/src/: IXClientThread.cpp  IXWebSocketClient.cpp  IXWebSocketClientData.cpp  IXWebSocketClientPrivate.cpp
ixlib/wss/: CMakeLists.txt
ixlib/wss/include/: IxConfig.h  IxConfigPort.h  IxConfigProtocol.h  IxConfigTEXT.h  IxConfigXML.h  IxConnectionInfo.h  IxHttpSessionData.h  IxPluginConnector.h  IxPluginManager.h  IxServer.h  IxSession.h  IxSessionData.h  IxSingleton.h  IxThread.h  IxWebSocketServer.h  IxWebSocketSessionData.h  IxWebSocketVhost.h
ixlib/wss/src/: IxConfig.cpp  IxConfigPort.cpp  IxConfigProtocol.cpp  IxConfigTEXT.cpp  IxConfigXML.cpp  IxConnectionInfo.cpp  IxHttpSessionData.cpp  IxPluginConnector.cpp  IxPluginManager.cpp  IxSession.cpp  IxSessionData.cpp  IxThread.cpp  IxWebSocketServer.cpp  IxWebSocketSessionData.cpp  IxWebSocketVhost.cpp
ixplugins/: CMakeLists.txt  ixplugin.h
ixplugins/jsonrpc/: CMakeLists.txt  JsonObject.cpp  JsonObject.h  JsonRpcParser.cpp  JsonRpcParser.h  JsonRpcPlugin.cpp  JsonRpcPlugin.h  JsonRpcProcessor.cpp  JsonRpcProcessor.h  Makefile
ixplugins/jsonrpc/include/: NativeCasware.h  NativeTypes.h  Singleton.h
ixplugins/jsonrpc/modules/: Casware.cpp  Casware.h  Event.cpp  Event.h  EventTarget.cpp  EventTarget.h  NativeCasware.cpp  ObjectFactory.cpp  ObjectFactory.h  ObjectInstance.cpp  ObjectInstance.h  macros.h
ixplugins/simple/: CMakeLists.txt  SimplePlugin.cpp  SimplePlugin.h
samples/: CMakeLists.txt
samples/client/: CMakeLists.txt  client.cpp
samples/client_web/: CMakeLists.txt  full_jsons.js  websocket_client.html  websocket_client2.html
samples/old_server/: CMakeLists.txt  server.cpp
samples/server/: CMakeLists.txt  server.cpp
