cmake_minimum_required(VERSION 2.8)

project(ixlib)

message (STATUS "..proc = ${PROJECT_NAME}") 
#=====================================================================================
# define directory path
#=====================================================================================

#=====================================================================================
# sub directories
#=====================================================================================
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/wss)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/wsc)
#add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/old_wss)
#=====================================================================================
# build sources
#=====================================================================================

#=====================================================================================
# install 
#=====================================================================================

