cmake_minimum_required(VERSION 2.8)

project(ixwss_plugins)

#=====================================================================================
# define directory path
#=====================================================================================

#=====================================================================================
# sub directories
#=====================================================================================
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/jsonrpc)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/simple)

#=====================================================================================
# install 
#=====================================================================================

