cmake_minimum_required(VERSION 2.8)

project(ixsamples)

#=====================================================================================
# define directory path
#=====================================================================================

#=====================================================================================
# sub directories
#=====================================================================================
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/server)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/client)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/client_web)
#add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/old_server)

#=====================================================================================
# build sources
#=====================================================================================

#=====================================================================================
# install 
#=====================================================================================
